[package]
name = "eth-gas-estimator"
version = "0.1.0"
edition = "2021"
authors = ["Giacomo Milligan <giaki3003@gmail.com>"]
description = "High-performance gas estimation service for Ethereum transactions"

[dependencies]
# Web framework
actix-web = "4.3.1"
revm = { version = "19.6.0", features = ["std", "memory_limit"] }
foundry-fork-db = "0.12"
eyre = "0.6.8"
alloy = { version = "0.12.5", features = ["full"] }

# Async runtime
tokio = { version = "1.28.2", features = ["full"] }

# Serialization/Deserialization
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

# Logging and monitoring
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-actix-web = "0.7.4"

# Error handling
thiserror = "1.0.40"

# Configuration
dotenv = "0.15.0"

[dev-dependencies]
reqwest = { version = "0.11.18", features = ["json"] }

[lib]
path = "src/lib.rs"

[[test]]
name = "api_tests"
path = "tests/api_tests/mod.rs"

[[test]]
name = "transaction_tests"
path = "tests/transaction_tests/mod.rs"
